--- a/style.css
+++ b/style.css
@@ -499,3 +499,58 @@ h2 {
 }
 
 /* contato */
+
+#contato {
+    background-color:#111;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70wh;
+}
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border:rgb(53, 53,53) 0.1rem solid;
+    border-color: rgb(163,163,163);
+    background: (250,250,250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p{
+    font-size: larger;
+}
+
+.contact-icon{
+    cursor:default;
+  
+    height: 2rem;
+    margin-left: 0;
+}
+
+/*  footer section */
+footer{
+    display: flex;
+    background-color: #111;
+    height:auto;
+
+    width: 100%;
+    align-items:flex-start;
+  
+}
+footer p{
+    text-align: center;
+  
+    bottom: 0;
+    background-color:#111;
+    margin: auto;
+}
