--- a/style.css
+++ b/style.css
@@ -56,12 +56,12 @@ nav {
     gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
-    transition: transform 0.3s ease-in;
-
+    transition: all 0.3s ease-in-out;
+    max-height: 0;
 }
 
 .nav-links.active {
-    transform: translateX(0);
+    max-height: 300px;
 }
 
 a {
@@ -136,16 +136,15 @@ a:hover {
     transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
 }
 
-.mobile-menu.open span:first-child {
+.mobile-menu.active span:first-child {
     transform: rotate(45deg) translate(10px, 5px);
-
 }
 
-.mobile-menu.open span:nth-child(2) {
+.mobile-menu.active span:nth-child(2) {
     opacity: 0;
 }
 
-.mobile-menu.open span:last-child {
+.mobile-menu.active span:last-child {
     transform: rotate(-45deg) translate(10px, -5px);
 }
 
@@ -252,8 +251,6 @@ a:hover {
 .forma-3 {
     left: 0;
     bottom: -20vh;
-
-
 
 }
 
