--- a/media.css
+++ b/media.css
@@ -1,3 +1,5 @@
+
+
 @media (max-width: 999px) {
     .btn-1{
         display: none;
@@ -76,7 +78,7 @@
     }
     .p1-color {
         font-size: 1rem;
-        text-align: center;
+        text-align: justify;
     }
 
     
@@ -137,6 +139,19 @@
 }
 /* Seção Planos */
 
+    .plano-card{
+       height: 400px;
+       flex: 0 0 300px;
+    }
+    .plano-card:hover {
+        transform: none;
+    }
+    .planos-container {
+        overflow-x: hidden; /* Remove o scroll horizontal */
+        flex-wrap: wrap; /* Quebra os cards em várias linhas se necessário */
+        justify-content: center; /* Centraliza os cards */
+        padding: 20px; /* Ajuste no padding */
+    }
     
     .card-bottom {
         top: 1rem;
@@ -165,31 +180,5 @@
     /* Footer */
     footer {
         padding: 1rem 0;
-    }
-}
-@media (max-width: 480px) {
-    h1 {
-        font-size: 2.5rem;
-    }
-    
-    .section__text {
-        padding-top: 1rem;
-    }
-    
-    .pic-text {
-        padding: 0 1rem;
-    }
-    
-    .plano-card {
-        width: 95%;
-    }
-    
-    .btn {
-        padding: 10px 20px;
-        font-size: 0.9rem;
-    }
-    
-    .logo img {
-        height: 45px;
     }
 }
