--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p {
 
 h1 {
     color: var(--neutrals-background-neturals-neutral-color-400, #E0E0E0);
-    font-size: 72px;
+    font-size: 60px;
     font-weight: 700;
     line-height: 110%;
 }
@@ -92,7 +92,7 @@ a:hover {
 }
 
 .btn-1 {
-    border: rgb(179, 179, 179) 0.1rem solid;
+  
     background: rgba(255, 255, 255, 0.822);
 
 }
@@ -221,43 +221,47 @@ a:hover {
     height: 100vh;
     position: relative;
     z-index: 0;
-    overflow: hidden;
+    overflow: visible;
+    isolation: isolate; 
+    
 }
 
 .forma-1,
 .forma-2,
 .forma-3,
-.forma-4,
-.forma-4-1,
-.forma-3-1 {
+.forma-4{
     position: absolute;
+    width: clamp(150px, 25vw, 250px);
+    height: auto;
+    z-index: -1;
 }
 
 
 .forma-1 {
-    right: 0;
-    top: -34vh;
+    right: -5%;
+    top: -45%;
     transform: rotate(-25deg);
 
 }
 
 .forma-2 {
-    left: 0;
-    top: -33vh;
+    left: -5%;
+    top: -33%;
     transform: rotate(30deg);
 
 }
 
 .forma-3 {
-    left: 0;
-    bottom: -20vh;
+    left: -2%;
+    bottom: -30%;
+    z-index: 5;
 
 }
 
 .forma-4 {
-    right: 0;
-    bottom: -20vh;
-
+    right: -5%;
+    bottom: -19%;
+    
 }
 
 
@@ -293,8 +297,9 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 40px;
+    gap: 30px;
     width: 100%;
+
     max-width: 1200px;
     margin: 0 auto;
     position: relative;
@@ -306,12 +311,13 @@ h2 {
     align-items: center;
     justify-content: center;
     width: 100%;
-    gap: 2rem;
+    gap: 0rem;
 }
 
 .texto-sobre {
     width: 50%;
     max-width: 460px;
+    
 }
 
 .imagem-sobre {
@@ -319,12 +325,14 @@ h2 {
     display: flex;
     justify-content: center;
 }
-
+.imagem-sobre img{
+    height: 60vh;
+}
 .texto-sobre p {
     color: white;
     font-weight: 300;
     line-height: 150%;
-    font-size: 20px;
+    font-size: 18px;
     text-align: justify;
 }
 
@@ -371,52 +379,43 @@ h2 {
     background-color: rgb(17, 17, 17);
     min-height: 100vh;
     position: relative;
-    z-index: 0;
-    overflow: hidden;
+    z-index: 1;
+    padding: 40px 0;
 }
 
 .centro {
-
-    min-height: 100vh;
+  top:5rem;
+    min-height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
     z-index: 0;
-    overflow: hidden;
+
 }
 
 .planos-container {
-    height: auto;
+  
     display: flex;
     width: 87vw;
     align-items: center;
     justify-content: center;
-    gap: 70px;
-    padding: 20px 0 20px 20px;
-    scroll-padding: 20px;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    -webkit-overflow-scrolling: touch;
-    user-select: none;
-}
-.planos-container::-webkit-scrollbar {
-    display: none;
-}
-.planos-container.active {
-    user-select: none;
+    gap: 30px;
+    max-width: 1400px;
+    padding: 20px;
 }
 
+
 .plano-card {
-    flex: 0 0 390px;
+    width: 390px;
     background: #111;
     height: 480px;
     border-radius: 10px;
     padding: 0px;
     border: 1px solid #FDDB3A;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    scroll-snap-align: start;
+    scroll-snap-align: center;
 }
 
 .plano-card h3 {
@@ -424,11 +423,7 @@ h2 {
     font-size: 1.5rem;
 }
 
-.preco {
-    font-size: 2rem;
-    color: #0084E9;
-    margin: 15px 0;
-}
+
 
 .plano-card:hover {
     transform: translateY(-5px);
@@ -453,17 +448,6 @@ h2 {
     padding: 20px;
 }
 
-.forma-3-1 {
-    left: 0;
-    top: -33.2vh;
-}
-
-.forma-4-1 {
-    right: 0;
-    top: -30.2vh;
-
-}
-
 .plano-branco {
     color: #E0E0E0;
 }
@@ -475,13 +459,13 @@ h2 {
 
 .card-bottom {
     position: relative;
-    top: 2rem;
+
     gap: 2rem;
 }
 
 .btn-3{
     position: relative;
-    top: 5rem;
+    top: 2rem;
     padding: 16px 54px;
     background-color:#FDDB3A;
     gap: 10px;
